added finnish acknowledgement, CMS refs corrected
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@7022 4525493e-7705-40b1-a816-d608a930855b

--- a/2012/7TeV three papers/combined/combined_epl.tex
+++ b/2012/7TeV three papers/combined/combined_epl.tex
@@ -312,7 +312,7 @@ Note that this is a direct measurement at $\sqrt s = 7\un{TeV}$, not an extrapol
 
 The total, elastic and inelastic cross-section values obtained with different methods and data sets (summarized in Table~\ref{tab:cs}) show excellent agreement. In particular, the inelastic cross-sections from two completely independent measurements, once determined from the elastic measurement with the Roman Pot detectors and once directly from the more central charged-particle telescopes, agree remarkably well with each other and also with the ALICE \cite{alice_inel}, ATLAS \cite{atlas_inel} and CMS \cite{cms_inel} results (see Figure~\ref{fig:cs} right).
 
-The energy dependence of the proton-(anti)proton cross-sections is shown in Figure~\ref{fig:cs} left. The best fit of $\sigma_{\rm tot}(s)$ by the COMPETE Collaboration \cite{compete} (published before the TOTEM result) describes the energy dependence well even up to the highest energies measured.  
+The energy dependence of the proton-(anti)proton cross-sections is shown in Figure~\ref{fig:cs} left. The best fit of $\sigma_{\rm tot}(s)$ by the COMPETE Collaboration \cite{compete} (published before the TOTEM result) describes the energy dependence well even up to the highest energies measured.
 
 The ratio $\sigma_{\rm el}/\sigma_{\rm tot}$ can give some insights into the shape and the opacity of the proton, subject to model-dependent theoretical interpretations. The steady rise of this ratio with energy (Figure~\ref{fig:sigma rat}) is often interpreted as the increase of proton size and opacity with energy. 
 
@@ -321,7 +321,7 @@ The ratio $\sigma_{\rm el}/\sigma_{\rm tot}$ can give some insights into the sha
 %--------------------------------------------------
 \section{Relevance for cosmic-ray measurements}
 
-The LHC energy begins to overlap with the energy range where large area cosmic ray showers are studied (see Figure~\ref{fig:cs}). Investigations of high-energy proton-proton interactions at the LHC are therefore of high importance for the study of the development of cosmic ray showers in the atmosphere and thus for high-energy cosmic ray interpretations, like e.g.~the energy spectrum and particle composition \cite{nagano}.  The most important observable is the shower maximum $X_{\rm max}$ which is related to the primary particle mass. It strongly depends on the inelastic $\rm p$-air cross-section. It is worth mentioning that calculations of hadron-nucleus cross-sections in the Glauber-Gribov formalism \cite{glauber, gribov} require the knowledge of not only the inelastic $\rm pp$ cross-section but also the proton-proton elastic scattering amplitude in the small $|t|$-range. The latest Auger measurement of the inelastic cross-section at $\sqrt s = 57\un{TeV}$ \cite{auger} (Figure~\ref{fig:cs}) used the TOTEM cross-section values as an input. In addition, all kinds of diffractive phenomena influence the development of the shower cascade and the multiplicity fluctuations of secondary hadrons \cite{enterria}. Thus the measurements of the $\rm pp$ cross-sections and the particle flow are of high importance for the interpretation of cosmic ray showers.
+The LHC energy begins to overlap with the energy range where large area cosmic ray showers are studied (see Figure~\ref{fig:cs}). Investigations of high-energy proton-proton interactions at the LHC are therefore of high importance for the study of the development of cosmic ray showers in the atmosphere and thus for high-energy cosmic ray interpretations, like e.g.~the energy spectrum and particle composition \cite{nagano}.  The most important observable is the shower maximum $X_{\rm max}$ which is related to the primary particle mass. It strongly depends on the inelastic $\rm p$-air cross-section. It is worth mentioning that calculations of hadron-nucleus cross-sections in the Glauber-Gribov formalism \cite{glauber,gribov} require the knowledge of not only the inelastic $\rm pp$ cross-section but also the proton-proton elastic scattering amplitude in the small $|t|$-range. The latest Auger measurement of the inelastic cross-section at $\sqrt s = 57\un{TeV}$ \cite{auger} (Figure~\ref{fig:cs}) used the TOTEM cross-section values as an input. In addition, all kinds of diffractive phenomena influence the development of the shower cascade and the multiplicity fluctuations of secondary hadrons \cite{enterria}. Thus the measurements of the $\rm pp$ cross-sections and the particle flow are of high importance for the interpretation of cosmic ray showers.
 
 %--------------------------------------------------
 \section{Final remark}
@@ -343,9 +343,7 @@ We are grateful to CMS for providing their luminosity measurements.
 
 We thank S.~Ostapchenko and R.~Ulrich for valuable discussions on the cosmic-ray implications of our results.
 
-This work was supported by the institutions listed on the front page and partially also by NSF (US), the Magnus
-Ehrnrooth foundation (Finland), the Waldemar von Frenckell foundation (Finland), the Academy of
-Finland, the OTKA grant NK 101438, 73143 (Hungary) and the NKTH-OTKA grant 74458 (Hungary).
+This work was supported by the institutions listed on the front page and partially also by NSF (US), the Magnus Ehrnrooth foundation (Finland), the Waldemar von Frenckell foundation (Finland), the Academy of Finland, \revision{the Finnish Academy of Science and Letters (The Vilho, Yrj\"o and Kalle V\"ais\"al\"a Fund)}, the OTKA grant NK 101438, 73143 (Hungary) and the NKTH-OTKA grant 74458 (Hungary).
 
 %--------------------------------------------------
 %\vskip-3mm
@@ -400,8 +398,8 @@ Finland, the OTKA grant NK 101438, 73143 (Hungary) and the NKTH-OTKA grant 74458
 	%arXiv:1205.3142
 	\Name{CMS collaboration}
 	CMS-PAS-FWD-11-001 and
-	CMS-PAS-QCD-11-002
-	%CERN-PH-EP-2012-293
+	%CMS-PAS-QCD-11-002
+	CERN-PH-EP-2012-293
 
 \bibitem{auger}
 %title = {Measurement of the Proton-Air Cross Section at $\sqrt{s}\mathbf{=}57\text{\,}\text{\,}\mathrm{TeV}$ with the Pierre Auger Observatory},
