aligned with the accepted EPL version
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@7324 4525493e-7705-40b1-a816-d608a930855b

--- a/2012/7TeV three papers/combined/combined_cern.tex
+++ b/2012/7TeV three papers/combined/combined_cern.tex
@@ -124,29 +124,29 @@ J.~Whitmore\Iref{10} and
 P.~Wyszkowski\IAref{8}{g}
 \end{Authlist}
 
-\Instline{1a}{Institute of Physics of the Academy of Sciences of the Czech Republic, Praha, Czech Republic.}
-\Instline{1b}{Czech Technical University, Praha, Czech Republic.}
-\Instline{2} {National Institute of Chemical Physics and Biophysics NICPB, Tallinn, Estonia.}
-\Instline{3a}{Helsinki Institute of Physics, Finland.}
-\Instline{3b}{Department of Physics, University of Helsinki, Finland.}
-\Instline{4} {MTA Wigner Research Center, RMKI, Budapest, Hungary.}
-\Instline{5a}{INFN Sezione di Bari, Italy.}
-\Instline{5b}{Dipartimento Interateneo di Fisica di Bari, Italy.}
-\Instline{6a}{Sezione INFN, Genova, Italy.}
-\Instline{6b}{Universit\`{a} degli Studi di Genova, Italy.}
-\Instline{7a}{INFN Sezione di Pisa, Italy.}
-\Instline{7b}{Universit\`{a} degli Studi di Siena and Gruppo Collegato INFN di Siena, Italy.}
-\Instline{8} {CERN, Geneva, Switzerland.}
-\Instline{9} {Case Western Reserve University, Dept. of Physics, Cleveland, OH, USA.}
-\Instline{10}{Penn State University, Dept.~of Physics, University Park, PA, USA.}
+\Instline{1a}{Institute of Physics of the Academy of Sciences of the Czech Republic, Praha, Czech Republic, EU}
+\Instline{1b}{Czech Technical University, Praha, Czech Republic, EU}
+\Instline{2} {National Institute of Chemical Physics and Biophysics NICPB, Tallinn, Estonia, EU}
+\Instline{3a}{Helsinki Institute of Physics, Finland, EU}
+\Instline{3b}{Department of Physics, University of Helsinki, Finland, EU}
+\Instline{4} {MTA Wigner Research Center, RMKI, Budapest, Hungary, EU}
+\Instline{5a}{INFN Sezione di Bari, Italy, EU}
+\Instline{5b}{Dipartimento Interateneo di Fisica di Bari, Italy, EU}
+\Instline{6a}{Sezione INFN, Genova, Italy, EU}
+\Instline{6b}{Universit\`{a} degli Studi di Genova, Italy, EU}
+\Instline{7a}{INFN Sezione di Pisa, Italy, EU}
+\Instline{7b}{Universit\`{a} degli Studi di Siena and Gruppo Collegato INFN di Siena, Italy, EU}
+\Instline{8} {CERN, Geneva, Switzerland}
+\Instline{9} {Case Western Reserve University, Dept. of Physics, Cleveland, OH, USA}
+\Instline{10}{Penn State University, Dept.~of Physics, University Park, PA, USA}
 
-\Anotfoot{a}{INRNE-BAS, Institute for Nuclear Research and Nuclear Energy, Bulgarian Academy of Sciences, Sofia, Bulgaria.}
-\Anotfoot{b}{Ioffe Physical - Technical Institute of Russian Academy of Sciences.}
-\Anotfoot{c}{Warsaw University of Technology, Poland.}
-\Anotfoot{d}{Institute of Nuclear Physics, Polish Academy of Science, Cracow, Poland.}
-\Anotfoot{e}{Department of Atomic Physics, E\"otv\"os University, Hungary.}
-\Anotfoot{f}{SLAC National Accelerator Laboratory, Stanford CA, USA.}
-\Anotfoot{g}{AGH University of Science and Technology, Cracow, Poland.}
+\Anotfoot{a}{INRNE-BAS, Institute for Nuclear Research and Nuclear Energy, Bulgarian Academy of Sciences, Sofia, Bulgaria, EU}
+\Anotfoot{b}{Ioffe Physical - Technical Institute of Russian Academy of Sciences, St.~Petersburg, Russian Federation}
+\Anotfoot{c}{Warsaw University of Technology, Poland, EU}
+\Anotfoot{d}{Institute of Nuclear Physics, Polish Academy of Science, Cracow, Poland, EU}
+\Anotfoot{e}{Department of Atomic Physics, E\"otv\"os University, Hungary, EU}
+\Anotfoot{f}{SLAC National Accelerator Laboratory, Stanford CA, USA}
+\Anotfoot{g}{AGH University of Science and Technology, Cracow, Poland, EU}
 
 \newpage
 \begin{abstract}
@@ -220,7 +220,7 @@ Right: measurements of total, inelastic and elastic cross-sections at $\sqrt s =
 \def\FigRatio{%
 \begin{figure}
 \begin{center}
-\includegraphics{fig/sigma_el_to_sigma_tot.pdf}
+\includegraphics{fig/sigma_el_to_sigma_tot_cern.pdf}
 %\vskip-5mm
 \caption{The ratio of the elastic to total cross-section as a function of the scattering energy $\sqrt s$. The dashed line shows the ratio of the $\sigma_{\rm el}(s)$ and $\sigma_{\rm tot}(s)$ fits from Figure~\ref{fig:cs}.
 }
@@ -320,7 +320,7 @@ The elastic and inelastic measurements can be combined in order to determine $\r
 \label{eq:rho}
 \rho^2 = 16\pi\ (\hbar c)^2\ {\cal L_{\rm int}^{\rm CMS}}\ {\d N_{\rm el}/\d t|_{t=0}\over (N_{\rm el} + N_{\rm inel})^2} - 1\ .
 \end{equation}
-Note that this is a direct measurement at $\sqrt s = 7\un{TeV}$, not an extrapolation from lower-energy measurements. Inserting the values from \cite{P1,P2} and the CMS luminosity measurement yields $\rho^2 = 0.009 \pm 0.056$ (mean and standard deviation). This estimate of $\rho^2$ cannot be translated into terms of $\rho$ in a straight-forward manner since an important part of the $\rho^2$ distribution extends to negative values, where square root is not defined. Instead, one can state that at $95\%$ confidence level $\rho^2 < 0.10$. This upper bound can be equally expressed as $\rho < 0.32$. Alternatively, one can pursue the Bayes' approach to estimate $|\rho|$. Taking a uniform prior $|\rho|$ distribution, it yields a posterior distribution with mean $0.145$ and standard deviation $0.091$.
+Note that this is a direct measurement at $\sqrt s = 7\un{TeV}$, not an extrapolation from lower-energy measurements. Inserting the values from \cite{P1,P2} and the CMS luminosity measurement yields $\rho^2 = 0.009 \pm 0.056$ (mean and standard deviation). This estimate of $\rho^2$ cannot be translated into terms of $\rho$ in a straight-forward manner since an important part of the $\rho^2$ distribution extends to negative values, where the square root is not defined. Instead, one can state that at $95\%$ confidence level $\rho^2 < 0.10$. This upper bound can be equally expressed as $\rho < 0.32$. Alternatively, one can pursue the Bayes' approach to estimate $|\rho|$. Taking a uniform prior $|\rho|$ distribution, it yields a posterior distribution with mean $0.145$ and standard deviation $0.091$.
 
 %--------------------------------------------------
 \section{Comparison with other experiments}
@@ -329,14 +329,14 @@ The total, elastic and inelastic cross-section values obtained with different me
 
 The energy dependence of the proton-(anti)proton cross-sections is shown in Figure~\ref{fig:cs} left. The best fit of $\sigma_{\rm tot}(s)$ by the COMPETE Collaboration \cite{compete} (published before the TOTEM result) describes the energy dependence well even up to the highest energies measured.
 
-The ratio $\sigma_{\rm el}/\sigma_{\rm tot}$ can give some insights into the shape and the opacity of the proton, subject to model-dependent theoretical interpretations. The steady rise of this ratio with energy (Figure~\ref{fig:sigma rat}) is often interpreted as the increase of proton size and opacity with energy. 
+The ratio $\sigma_{\rm el}/\sigma_{\rm tot}$ can give some insights into the shape and the opacity of the proton, subject to model-dependent theoretical interpretations. The steady rise of this ratio with energy (Figure~\ref{fig:sigma rat} compiled from \cite{pdg}) is often interpreted as the increase of proton size and opacity with energy. 
 
 \FigRatio
 
 %--------------------------------------------------
 \section{Relevance for cosmic-ray measurements}
 
-The LHC energy begins to overlap with the energy range where large area cosmic ray showers are studied (see Figure~\ref{fig:cs}). Investigations of high-energy proton-proton interactions at the LHC are therefore of high importance for the study of the development of cosmic ray showers in the atmosphere and thus for high-energy cosmic ray interpretations, like e.g.~the energy spectrum and particle composition \cite{nagano}.  The most important observable is the shower maximum $X_{\rm max}$ which is related to the primary particle mass. It strongly depends on the inelastic $\rm p$-air cross-section. It is worth mentioning that calculations of hadron-nucleus cross-sections in the Glauber-Gribov formalism \cite{glauber,gribov} require the knowledge of not only the inelastic $\rm pp$ cross-section but also the proton-proton elastic scattering amplitude in the small $|t|$-range. The latest Auger measurement of the inelastic cross-section at $\sqrt s = 57\un{TeV}$ \cite{auger} (Figure~\ref{fig:cs}) used the TOTEM cross-section values as an input. In addition, all kinds of diffractive phenomena influence the development of the shower cascade and the multiplicity fluctuations of secondary hadrons \cite{enterria}. Thus the measurements of the $\rm pp$ cross-sections and the particle flow are of high importance for the interpretation of cosmic ray showers.
+The LHC energy begins to overlap with the energy range where large area cosmic ray showers are studied (see Figure~\ref{fig:cs}). Investigations of high-energy proton-proton interactions at the LHC are therefore of high importance for the study of the development of cosmic ray showers in the atmosphere and thus for high-energy cosmic ray interpretations, like e.g.~the energy spectrum and particle composition \cite{nagano}.  The most important observable is the shower maximum $X_{\rm max}$ which is related to the primary particle mass. It strongly depends on the inelastic proton-air cross-section. It is worth mentioning that calculations of hadron-nucleus cross-sections in the Glauber-Gribov formalism \cite{glauber,gribov} require the knowledge of not only the inelastic $\rm pp$ cross-section but also the proton-proton elastic scattering amplitude in the small $|t|$-range. The latest Auger measurement of the inelastic cross-section at $\sqrt s = 57\un{TeV}$ \cite{auger} (Figure~\ref{fig:cs}) used the TOTEM cross-section values as an input. In addition, all kinds of diffractive phenomena influence the development of the shower cascade and the multiplicity fluctuations of secondary hadrons \cite{enterria}. Thus the measurements of the $\rm pp$ cross-sections and the particle flow are of high importance for the interpretation of cosmic ray showers.
 
 %--------------------------------------------------
 \section{Final remark}
@@ -358,28 +358,30 @@ We are grateful to CMS for providing their luminosity measurements.
 
 We thank S.~Ostapchenko and R.~Ulrich for valuable discussions on the cosmic-ray implications of our results.
 
-This work was supported by the institutions listed on the front page and partially also by NSF (US), the Magnus Ehrnrooth foundation (Finland), the Waldemar von Frenckell foundation (Finland), the Academy of Finland, the Finnish Academy of Science and Letters (The Vilho, Yrj\"o and Kalle V\"ais\"al\"a Fund), the OTKA grant NK 101438, 73143 (Hungary) and the NKTH-OTKA grant 74458 (Hungary).
+This work was supported by the institutions listed on the front page and partially also by NSF (US), the Magnus Ehrnrooth foundation (Finland), the Waldemar von Frenckell Foundation (Finland), the Academy of Finland, the Finnish Academy of Science and Letters (The Vilho, Yrj\"o and Kalle V\"ais\"al\"a Fund), the OTKA grant NK 101438, 73143 (Hungary) and the NKTH-OTKA grant 74458 (Hungary).
 
 %--------------------------------------------------
 %\vskip-3mm
 %\vskip0mm % to cancell the following unskip
 \begin{thebibliography}{00}
 
+\def\etal{{\it et al.}}
+
 \bibitem{epl96}
     %First measurements of the total proton-proton cross section at the LHC energy of $\sqrt s =7\,\rm TeV$ CERN-PH-EP-2011-158
-	\Name{Antchev G.~{\it et al.}~(TOTEM Collaboration)}
+	\Name{Antchev G.~\etal~(TOTEM Collaboration)}
 	\REVIEW{Europhys.~Lett.}{96}{2011}{21002}
 
 \bibitem{P1} 
-	\Name{Antchev G.~{\it et al.}~(TOTEM Collaboration)}
-	CERN-PH-EP-2012-239
-	%\REVIEW{Europhys.~Lett.}{TODO}{2012}{TODO}
+	\Name{Antchev G.~\etal~(TOTEM Collaboration)}
+	%CERN-PH-EP-2012-239
+	\REVIEW{Europhys.~Lett.}{101}{2013}{21002}
 
 \bibitem{P2} 
-	\Name{Antchev G.~{\it et al.}~(TOTEM Collaboration)}
-	%\REVIEW{Europhys.~Lett.}{TODO}{2012}{TODO}
+	\Name{Antchev G.~\etal~(TOTEM Collaboration)}
+	\REVIEW{Europhys.~Lett.}{101}{2013}{21003}
 	%{\it  Measurement of proton-proton inelastic scattering cross-section at $\sqrt s = 7\un{TeV}$},
-	CERN-PH-EP-2012-352
+	%CERN-PH-EP-2012-352
 
 %\bibitem{epl95}
 %    %Proton-proton elastic scattering at the LHC energy of \sqrt{s} = 7 TeV, Europhys. Lett. 95 (2011) 41001,CERN-PH-EP-2011-101 
@@ -392,7 +394,7 @@ This work was supported by the institutions listed on the front page and partial
 %	\REVIEW{JINST}{3}{2008}{S08007}
 
 \bibitem{compete} 
-	\Name{Cudell~J.~R.~{\it et al.} (COMPETE Collaboration)}
+	\Name{Cudell~J.~R.~\etal~(COMPETE Collaboration)}
 	\REVIEW{Phys.\ Rev.\ Lett.}{89}{2002}{201801}
 
 \bibitem{alice_inel}
@@ -415,13 +417,6 @@ This work was supported by the institutions listed on the front page and partial
 	CMS-PAS-FWD-11-001 and
 	%CMS-PAS-QCD-11-002
 	CERN-PH-EP-2012-293
-
-\bibitem{auger}
-%title = {Measurement of the Proton-Air Cross Section at $\sqrt{s}\mathbf{=}57\text{\,}\text{\,}\mathrm{TeV}$ with the Pierre Auger Observatory},
-%url = {http://link.aps.org/doi/10.1103/PhysRevLett.109.062002},
-	\Name{Pierre Auger Collaboration}
-	\REVIEW{Phys.\ Rev.\ Lett.}{109}{2012}{062002}
-
 \bibitem{pdg} 
 	\Name{Nakamura K.~\etal{} (Particle Data Group)}
 	\REVIEW{J.~Phys.}{G37}{2010}{075021}
@@ -437,6 +432,12 @@ This work was supported by the institutions listed on the front page and partial
 \bibitem{gribov}
 	\Name{Gribov V.~N.}
 	\REVIEW{Sov.~Phys.~JETP}{29}{1969}{483}
+
+\bibitem{auger}
+%title = {Measurement of the Proton-Air Cross Section at $\sqrt{s}\mathbf{=}57\text{\,}\text{\,}\mathrm{TeV}$ with the Pierre Auger Observatory},
+%url = {http://link.aps.org/doi/10.1103/PhysRevLett.109.062002},
+	\Name{Pierre Auger Collaboration}
+	\REVIEW{Phys.\ Rev.\ Lett.}{109}{2012}{062002}
 
 \bibitem{enterria}
 	\Name{d'Enterria D.~\etal}
