--- a/2012/7TeV three papers/combined/combined_epl.tex
+++ b/2012/7TeV three papers/combined/combined_epl.tex
@@ -343,7 +343,7 @@ We are grateful to CMS for providing their luminosity measurements.
 
 We thank S.~Ostapchenko and R.~Ulrich for valuable discussions on the cosmic-ray implications of our results.
 
-This work was supported by the institutions listed on the front page and partially also by NSF (US), the Magnus Ehrnrooth foundation (Finland), the Waldemar von Frenckell foundation (Finland), the Academy of Finland, \revision{the Finnish Academy of Science and Letters (The Vilho, Yrj\"o and Kalle V\"ais\"al\"a Fund)}, the OTKA grant NK 101438, 73143 (Hungary) and the NKTH-OTKA grant 74458 (Hungary).
+This work was supported by the institutions listed on the front page and partially also by NSF (US), the Magnus Ehrnrooth foundation (Finland), the Waldemar von Frenckell foundation (Finland), the Academy of Finland, the Finnish Academy of Science and Letters (The Vilho, Yrj\"o and Kalle V\"ais\"al\"a Fund), the OTKA grant NK 101438, 73143 (Hungary) and the NKTH-OTKA grant 74458 (Hungary).
 
 %--------------------------------------------------
 %\vskip-3mm
