aligned with the accepted EPL version
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@7325 4525493e-7705-40b1-a816-d608a930855b

--- a/2012/7TeV three papers/elastic/elastic_cern.tex
+++ b/2012/7TeV three papers/elastic/elastic_cern.tex
@@ -122,28 +122,28 @@ J.~Welti\IIref{3a}{3b} and
 J.~Whitmore\Iref{10}
 \end{Authlist}
 
-\Instline{1a}{Institute of Physics of the Academy of Sciences of the Czech Republic, Praha, Czech Republic.}
-\Instline{1b}{Czech Technical University, Praha, Czech Republic.}
-\Instline{2} {National Institute of Chemical Physics and Biophysics NICPB, Tallinn, Estonia.}
-\Instline{3a}{Helsinki Institute of Physics, Finland.}
-\Instline{3b}{Department of Physics, University of Helsinki, Finland.}
-\Instline{4} {MTA Wigner Research Center, RMKI, Budapest, Hungary.}
-\Instline{5a}{INFN Sezione di Bari, Italy.}
-\Instline{5b}{Dipartimento Interateneo di Fisica di Bari, Italy.}
-\Instline{6a}{Sezione INFN, Genova, Italy.}
-\Instline{6b}{Universit\`{a} degli Studi di Genova, Italy.}
-\Instline{7a}{INFN Sezione di Pisa, Italy.}
-\Instline{7b}{Universit\`{a} degli Studi di Siena and Gruppo Collegato INFN di Siena, Italy.}
-\Instline{8} {CERN, Geneva, Switzerland.}
-\Instline{9} {Case Western Reserve University, Dept. of Physics, Cleveland, OH, USA.}
-\Instline{10}{Penn State University, Dept.~of Physics, University Park, PA, USA.}
+\Instline{1a}{Institute of Physics of the Academy of Sciences of the Czech Republic, Praha, Czech Republic, EU}
+\Instline{1b}{Czech Technical University, Praha, Czech Republic, EU}
+\Instline{2} {National Institute of Chemical Physics and Biophysics NICPB, Tallinn, Estonia, EU}
+\Instline{3a}{Helsinki Institute of Physics, Finland, EU}
+\Instline{3b}{Department of Physics, University of Helsinki, Finland, EU}
+\Instline{4} {MTA Wigner Research Center, RMKI, Budapest, Hungary, EU}
+\Instline{5a}{INFN Sezione di Bari, Italy, EU}
+\Instline{5b}{Dipartimento Interateneo di Fisica di Bari, Italy, EU}
+\Instline{6a}{Sezione INFN, Genova, Italy, EU}
+\Instline{6b}{Universit\`{a} degli Studi di Genova, Italy, EU}
+\Instline{7a}{INFN Sezione di Pisa, Italy, EU}
+\Instline{7b}{Universit\`{a} degli Studi di Siena and Gruppo Collegato INFN di Siena, Italy, EU}
+\Instline{8} {CERN, Geneva, Switzerland}
+\Instline{9} {Case Western Reserve University, Dept. of Physics, Cleveland, OH, USA}
+\Instline{10}{Penn State University, Dept.~of Physics, University Park, PA, USA}
 
-\Anotfoot{a}{INRNE-BAS, Institute for Nuclear Research and Nuclear Energy, Bulgarian Academy of Sciences, Sofia, Bulgaria.}
-\Anotfoot{b}{Ioffe Physical - Technical Institute of Russian Academy of Sciences.}
-\Anotfoot{c}{Warsaw University of Technology, Poland.}
-\Anotfoot{d}{Institute of Nuclear Physics, Polish Academy of Science, Cracow, Poland.}
-\Anotfoot{e}{Department of Atomic Physics, E\"otv\"os University, Hungary.}
-\Anotfoot{f}{SLAC National Accelerator Laboratory, Stanford CA, USA.}
+\Anotfoot{a}{INRNE-BAS, Institute for Nuclear Research and Nuclear Energy, Bulgarian Academy of Sciences, Sofia, Bulgaria, EU}
+\Anotfoot{b}{Ioffe Physical - Technical Institute of Russian Academy of Sciences, St.~Petersburg, Russian Federation}
+\Anotfoot{c}{Warsaw University of Technology, Poland, EU}
+\Anotfoot{d}{Institute of Nuclear Physics, Polish Academy of Science, Cracow, Poland, EU}
+\Anotfoot{e}{Department of Atomic Physics, E\"otv\"os University, Hungary, EU}
+\Anotfoot{f}{SLAC National Accelerator Laboratory, Stanford CA, USA}
 
 \newpage
 \begin{abstract}
@@ -244,7 +244,7 @@ The first-level trigger benefits from the 20 possible hits (10 planes in both ne
 \begin{center}
 \includegraphics{fig/hit_dist.pdf}
 \vskip-3mm
-\caption{Hit distributions from dataset 3 in the far unit of the $220\un{m}$ station, right arm. Left: with diagonal cut only, Right: with all the elastic selection cuts (see Tab.~\ref{tab:cuts}). The left plot clearly shows the presence of a beam halo, which is eliminated by the selection cuts (the right plot). The distribution of elastic hits in the right plot is sharply cut at about $|y| = 29\un{mm}$ as a consequence of the LHC aperture limitations. }
+\caption{Hit distributions from dataset 3 in the far unit of the $220\un{m}$ station, right arm. Left: with diagonal cut only, Right: with all the elastic selection cuts (see Tab.~\ref{tab:cuts}). The left plot clearly shows the presence of a beam halo, which is eliminated by the selection cuts (right plot). The distribution of elastic hits in the right plot is sharply cut at about $|y| = 29\un{mm}$ as a consequence of the LHC aperture limitations. }
 \label{fig:hit dist}
 \end{center}
 \end{figure*}
@@ -310,7 +310,7 @@ The background contribution (i.e.~all non-elastic events passing the selection c
 %-------------------------
 \subsection{Acceptance correction}
 
-Two acceptance limitations were identified: the detector edge (relevant for low $|t|$) and the LHC aperture limitation shown in Fig.~\ref{fig:hit dist} right (relevant for high $|t|$). Both effects were treated by assuming azimuthal symmetry of the elastic scattering and by correcting for smearing around the limitation edges. In order to keep the uncertainty at a reasonable level, the analysis was constrained into the region where the full acceptance correction was not larger than a factor $7.5$%
+Two acceptance limitations were identified: the detector edge (relevant for low $|t|$) and the LHC aperture limitation shown in Fig.~\ref{fig:hit dist}, right (relevant for high $|t|$). Both effects were treated by assuming azimuthal symmetry of the elastic scattering and by correcting for smearing around the limitation edges. In order to keep the uncertainty at a reasonable level, the analysis was constrained into the region where the full acceptance correction was not larger than a factor $7.5$%
 %(considering both diagonals)
 .
 
@@ -398,7 +398,7 @@ over a large $|t|$-range, see Tab.~\ref{tab:B} and the black line
 %in the embedded plot
 in Fig.~\ref{fig:dsdt}. Since the slope $B$ remains constant even for the lowest $|t|$ values, one may conclude that
 %in the fit range
-the effects of the Coulomb-hadronic interference (for details see e.g.~\cite{kklp}) are smaller than our experimental sensitivity. Therefore, within the uncertainties, the fit can be attributed to the hadronic component of the scattering amplitude. Furthermore, it is assumed that Eq.~(\ref{eq:extrapolation}) describes the hadronic cross-section also for $|t|$ values below our acceptance and thus the fit can be used in the optical theorem to calculate the total cross-section according to Eq.~(\ref{eq:si tot}).
+the effects of the Coulomb-hadronic interference (for details see, e.g.,~\cite{kklp}) are smaller than our experimental sensitivity. Therefore, within the uncertainties, the fit can be attributed to the hadronic component of the scattering amplitude. Furthermore, it is assumed that Eq.~(\ref{eq:extrapolation}) describes the hadronic cross-section also for $|t|$ values below our acceptance and thus the fit can be used in the optical theorem to calculate the total cross-section according to Eq.~(\ref{eq:si tot}).
 
 
 
@@ -593,7 +593,7 @@ TOTEM has taken data under various beam and background conditions, luminosities 
 
 \TI
 \TII
-%\Fdist
+\Fdist
 
 
 For $|t|$-values below $0.2\un{GeV^2}$, the differential cross-section falls exponentially with $|t|$, as expressed in Eq.~(\ref{eq:extrapolation}). Due to the closer approach of the RP detectors to the beam center (see Tab.~\ref{tab:datasets}) in these data, the minimal reachable $|t|$-value was lowered from $0.02$ of the previous measurement \cite{epl96} down to $0.005\un{GeV^2}$. However, the exponential slope $B$ of the differential elastic cross-section stayed unchanged in this newly explored $|t|$-region. As presented in Tab.~\ref{tab:B}, the slope does not change with the chosen fit intervals. Consequently, the exponential dependence can be fitted over the large $|t|$-interval from $0.005$ to $0.2\un{GeV^2}$ resulting in a high precision determination of $B$. Compared to previous collider experiments at lower energies (Fig.~\ref{fig:B s}), $B$ rises steadily with the collision energy $\sqrt s$.
@@ -601,7 +601,7 @@ For $|t|$-values below $0.2\un{GeV^2}$, the differential cross-section falls exp
 
 \TB
 \FB
-\Fdist
+%\Fdist
 
 In order to derive the elastic and total cross-sections, the extrapolation to the optical point $t=0$ was performed (see Eq.~(\ref{eq:extrapolation})). The fact that $91\%$ of the elastic cross-section was visible, gives high confidence to the derived cross-sections, all summarized in Tab.~\ref{tab:results} with their statistical and systematic uncertainties. The elastic data were integrated up to $|t| = 0.415\un{GeV^2}$, where the effect of the larger $|t|$-contributions is small compared to the other uncertainties. The optical theorem can be used to calculate the total and inelastic cross-sections:
 \begin{equation}
@@ -643,6 +643,8 @@ Finland, the OTKA grant NK 101438, 73143 (Hungary) and the NKTH-OTKA grant 74458
 %--------------------------------------------------
 \begin{thebibliography}{99}
 
+\def\etal{{\it et al.}}
+
 \bibitem{epl95}
     %Proton-proton elastic scattering at the LHC energy of \sqrt{s} = 7 TeV, Europhys. Lett. 95 (2011) 41001,CERN-PH-EP-2011-101 
 	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
@@ -655,13 +657,13 @@ Finland, the OTKA grant NK 101438, 73143 (Hungary) and the NKTH-OTKA grant 74458
 
 \bibitem{P2} 
 	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
-	%\REVIEW{Europhys.~Lett.}{TODO}{2012}{TODO}
-	CERN-PH-EP-2012-352
+	\REVIEW{Europhys.~Lett.}{101}{2013}{21003}
+	%CERN-PH-EP-2012-352
 
 \bibitem{P3} 
 	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
-	%\REVIEW{Europhys.~Lett.}{TODO}{2012}{TODO}
-	CERN-PH-EP-2012-353
+	\REVIEW{Europhys.~Lett.}{101}{2013}{21004}
+	%CERN-PH-EP-2012-353
 
 \bibitem{jinst}
     %The TOTEM Experiment at the CERN Large Hadron Collider, JINST 3 S08007, 2008
@@ -703,7 +705,7 @@ Finland, the OTKA grant NK 101438, 73143 (Hungary) and the NKTH-OTKA grant 74458
 \bibitem{lafferty94}
  	% Where to stick your data points: The treatment of measurements within wide bins
 	\Name{Lafferty G.~D.~and Wyatt T.~R.}
-	\REVIEW{Nucl.\ Instrum.\ Meth.}{A 355}{1995}{541}
+	\REVIEW{Nucl.\ Instrum.\ Meth.\ A}{355}{1995}{541}
 
 \bibitem{compete} 
 	\Name{Cudell~J.~R.~\etal{} (COMPETE Collaboration)}
